--- a/restdo/biblio/templates/biblio/book_edit.html
+++ b/restdo/biblio/templates/biblio/book_edit.html
@@ -1,12 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-	"http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-	<title></title>
-</head>
-<body>
+{% extends "biblio/base.html" %}
 
-<form action="{% url edytuj_ksiazke book.id %}" method="post">
+{% block content %}
+
+<form class="edit_form" action="{% url edytuj_ksiazke book.id %}" method="post">
 	{% if book.id %}<input type="hidden" value="{{ book.id }}" name="id" />{% endif %}
 	<table>
 		<tr>
@@ -22,5 +18,4 @@
 	<input type="submit" value="Zapisz" />
 </form>
 
-</body>
-</html>
+{% endblock %}
