--- a/restdo/biblio/templates/biblio/base.html
+++ b/restdo/biblio/templates/biblio/base.html
@@ -32,6 +32,17 @@
 			border: 1px solid #000;
 			padding: 10px;
 		}
+
+		.alert {
+			margin: 10px 0;
+			color: #c00;
+			background-color: #fee;
+		}
+
+		.alert input {
+			color: #c00;
+			font-size: 1.5em;
+		}
 	</style>
 
 	{% block css %}
