client: readers full editing & others

--- a/restdo/biblio/templates/biblio/base.html
+++ b/restdo/biblio/templates/biblio/base.html
@@ -53,7 +53,7 @@
 
 <div class="menu">
 	<a href="{% url lista_ksiazek 0 %}">Książki</a>
-	<a href="">Czytelnicy</a>
+	<a href="{% url lista_czytelnikow 0 %}">Czytelnicy</a>
 	<a href="">Wypożyczenia</a>
 	<a href="">Kolejka oczekujących</a>
 </div>
