client: lends editing, fixed edit button in readers list

--- a/restdo/biblio/templates/biblio/readers_list.html
+++ b/restdo/biblio/templates/biblio/readers_list.html
@@ -49,6 +49,7 @@
 			<td>{{ reader.address }}</td>
 			<td style="text-align: center;">
 				<input onclick="javascript:document.location='{% url edytuj_czytelnika reader.id %}'" type="button" value="Edytuj" />
+				<input type="button" value="Wypożycz" />
 			</td>
 		</tr>
 	{% endfor %}
