--- a/restdo/biblio/templates/biblio/base.html
+++ b/restdo/biblio/templates/biblio/base.html
@@ -54,7 +54,7 @@
 <div class="menu">
 	<a href="{% url lista_ksiazek 0 %}">Książki</a>
 	<a href="{% url lista_czytelnikow 0 %}">Czytelnicy</a>
-	<a href="">Wypożyczenia</a>
+	<a href="{% url lista_wypozyczen 0 %}">Wypożyczenia</a>
 	<a href="">Kolejka oczekujących</a>
 </div>
 
